<resources>
    <string name="point_charging_pile">充电桩</string>
    <string name="point_product_point">出品点</string>
    <string name="point_recycle_point">回收点</string>
    <string-array name="deliveryMode">
        <item>送餐模式</item>
        <item>巡航模式</item>
        <item>回盘模式</item>
        <item>生日模式</item>
        <item>回盘模式</item>
        <item>自由配送模式</item>
    </string-array>
    <string name="exception_3d_error">3D摄像头异常</string>
    <string name="exception_chassis_failure">底盘故障，请联系技术人员</string>
    <string name="exception_chassis_over_current">底盘过流，请联系技术人员</string>
    <string name="exception_encounter_obstacle_in_target_point">目标点存在障碍物，任务失败</string>
    <string name="exception_encounter_obstacle_in_target_point_or_in_the_way">导航途中或目标点存在障碍物，导航失败</string>
    <string name="exception_encounter_obstacle_in_the_way">导航途中遭遇障碍物，任务失败</string>
    <string name="exception_forbidden_zone">进入禁区，任务失败</string>
    <string name="exception_imu_error">IMU故障，请联系技术人员</string>
    <string name="exception_laser_error">激光异常，请联系技术人员</string>
    <string name="exception_new_target">收到导航新目标，任务失败</string>
    <string name="exception_not_in_work_space">当前处于工作区外，任务失败</string>
    <string name="exception_remote_cancel_navigation">当前任务已被取消</string>
    <string name="exception_speedometer_error">里程计异常，请联系技术人员</string>
    <string name="exception_tripped_in_obstacle">陷入障碍物中或过于靠近墙体，任务失败</string>
    <string name="exception_visual_mark">标签定位异常</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="strNetworkTipsCancelBtn">取消</string>
    <string name="strNetworkTipsConfirmBtn">继续下载</string>
    <string name="strNetworkTipsMessage">你已切换到移动网络，是否继续当前下载？</string>
    <string name="strNetworkTipsTitle">网络提示</string>
    <string name="strNotificationClickToContinue">继续下载</string>
    <string name="strNotificationClickToInstall">点击安装</string>
    <string name="strNotificationClickToRetry">点击重试</string>
    <string name="strNotificationClickToView">点击查看</string>
    <string name="strNotificationDownloadError">下载失败</string>
    <string name="strNotificationDownloadSucc">下载完成</string>
    <string name="strNotificationDownloading">正在下载</string>
    <string name="strNotificationHaveNewVersion">有新版本</string>
    <string name="strToastCheckUpgradeError">检查新版本失败，请稍后重试</string>
    <string name="strToastCheckingUpgrade">正在检查，请稍候...</string>
    <string name="strToastYourAreTheLatestVersion">你已经是最新版了</string>
    <string name="strUpgradeDialogCancelBtn">下次再说</string>
    <string name="strUpgradeDialogContinueBtn">继续</string>
    <string name="strUpgradeDialogFeatureLabel">更新说明</string>
    <string name="strUpgradeDialogFileSizeLabel">包大小</string>
    <string name="strUpgradeDialogInstallBtn">安装</string>
    <string name="strUpgradeDialogRetryBtn">重试</string>
    <string name="strUpgradeDialogUpdateTimeLabel">更新时间</string>
    <string name="strUpgradeDialogUpgradeBtn">立即更新</string>
    <string name="strUpgradeDialogVersionLabel">版本</string>
    <string name="text_add">添加</string>
    <string name="text_already_update">已更新</string>
    <string name="text_android_wifi_connect_time_out">安卓网络连接超时</string>
    <string name="text_app_name">Delivery</string>
    <string name="text_app_version">应用版本</string>
    <string name="text_arrive_at_target_point">已到达: %1$s</string>
    <string name="text_auto_charge_level_too_high">自动充电电量最高不能超过70%</string>
    <string name="text_auto_charge_level_too_low">自动充电电量最低不能低于10%</string>
    <string name="text_auto_charge_threshold">自动充电电量:</string>
    <string name="text_back">返回</string>
    <string name="text_back_to_main_page">返回主界面</string>
    <string name="text_background_music">背景音乐</string>
    <string name="text_background_music_choose">选择背景音乐</string>
    <string name="text_basic_setting">基本设置</string>
    <string name="text_bind">开始绑定</string>
    <string name="text_birthday_background_music_play_time">背景音乐播放时间点</string>
    <string name="text_birthday_complete_prompt">取餐完毕提示语</string>
    <string name="text_birthday_mode">生日模式</string>
    <string name="text_birthday_mode_in_progress">生日模式运行中...</string>
    <string name="text_birthday_mode_pick_meal_prompt">送餐到达提示语</string>
    <string name="text_brightness_setting">屏幕亮度</string>
    <string name="text_broadcast_mac_address">广播MAC地址</string>
    <string name="text_calling_config">呼叫模块配置</string>
    <string name="text_cancel">取消</string>
    <string name="text_cancel_recycle">取消任务</string>
    <string name="text_changing_map">正在切换地图，请稍候...</string>
    <string name="text_charge_point">充电桩</string>
    <string name="text_check_position_error">检测到定位异常,请检查机器人定位</string>
    <string name="text_check_update">检查更新</string>
    <string name="text_choose">选择</string>
    <string name="text_click_to_refresh">点击刷新</string>
    <string name="text_click_to_upload">点击上传</string>
    <string name="text_click_too_fast">您点击的太频繁了，坐下喝杯茶吧</string>
    <string name="text_close">关闭</string>
    <string name="text_closed">已关闭</string>
    <string name="text_communicate_failed_with_ros">Android与导航系统通信异常，请退出应用检查接口是否连接正常</string>
    <string name="text_complete">完成</string>
    <string name="text_complete_countdown">完成&#040;%1$d秒后继续任务)</string>
    <string name="text_confirm">确认</string>
    <string name="text_confirm_android_and_ros_same_network">请确保安卓和导航在同一网络</string>
    <string name="text_confirm_delete_this_music">确认删除当前音频文件吗？</string>
    <string name="text_confirm_stop_charge">确认停止充电吗？</string>
    <string name="text_confirm_stop_task">确认停止当前配送任务吗？(%1$d秒后将继续执行)</string>
    <string name="text_confirm_use_this_language">确认在应用内使用当前选择的语言吗？</string>
    <string name="text_connect_time_out">连接超时</string>
    <string name="text_continue_task">继续任务</string>
    <string name="text_cruise_loop_broadcast">循环播报语</string>
    <string name="text_cruise_loop_broadcast_interval">播报间隔</string>
    <string name="text_cruise_mode">巡航模式</string>
    <string name="text_cruise_mode_in_progress">巡航模式运行中...</string>
    <string name="text_current_android_connection">安卓WiFi: %1$s</string>
    <string name="text_current_android_wifi">安卓连接: %1$s</string>
    <string name="text_current_android_wlan_status">安卓系统网络状态</string>
    <string name="text_current_host_ip">导航主机IP: %1$s</string>
    <string name="text_current_hostname">机器编号: %1$s</string>
    <string name="text_current_mac_address">本机MAC地址</string>
    <string name="text_current_nav_wifi">导航WiFi: %1$S</string>
    <string name="text_current_navigation_wlan_status">导航系统网络状态</string>
    <string name="text_current_receive_data">收到数据</string>
    <string name="text_current_receive_mac_address">待配对的MAC地址</string>
    <string name="text_current_ros_wifi">导航连接: %1$s</string>
    <string name="text_current_version">当前版本: </string>
    <string name="text_custom_prompt_for_delivery_arrival">自定义送餐到达提示(___________，请取走第*层美食)</string>
    <string name="text_data_synchronization">数据同步</string>
    <string name="text_delete">清空</string>
    <string name="text_delete_all">删除所有号码</string>
    <string name="text_delete_current_number">删除当前号码</string>
    <string name="text_delivery_food_mode">送餐模式</string>
    <string name="text_delivery_mode">配送模式</string>
    <string name="text_delivery_mode_in_progress">送餐模式运行中...</string>
    <string name="text_deploy_map">地图部署</string>
    <string name="text_disabled">禁用</string>
    <string name="text_dispatch_settings">多机配置</string>
    <string name="text_display_content_during_delivery">配送过程中展示内容</string>
    <string name="text_display_expression">表情动画</string>
    <string name="text_display_target_table">目标餐位</string>
    <string name="text_do_not_apply_map_repeatedly">请勿选择当前地图</string>
    <string name="text_do_not_play_background_music">不播放</string>
    <string name="text_domestic">中国</string>
    <string name="text_download">下载</string>
    <string name="text_download_failed">下载失败，请重新尝试</string>
    <string name="text_downloading_do_not_exit">当前存在未完成的下载任务，请勿退出</string>
    <string name="text_emergency_stop_on">急停按钮已按下,机器人无法移动\n如需恢复运行,请旋转弹起急停按钮</string>
    <string name="text_empty_current_mac_address">请先获取MAC地址</string>
    <string name="text_enable_birthday_complete_prompt">开启取餐完毕提示语</string>
    <string name="text_enable_birthday_pick_meal_prompt">开启送餐到达提示语</string>
    <string name="text_enable_cruise_loop_broadcast">开启巡航播报</string>
    <string name="text_enable_encounter_obstacle_prompt">开启避障提示语</string>
    <string name="text_enable_place_recyclables_prompt">开启放置回收物提醒</string>
    <string name="text_enable_recycle_complete_prompt">开启回收完毕提示语</string>
    <string name="text_enable_recycle_loop_broadcast">开启循环回收播报</string>
    <string name="text_enabled">启用</string>
    <string name="text_encounter_obstacle_prompt">避障提示语</string>
    <string name="text_enter_lock_screen_password">请输入锁屏密码</string>
    <string name="text_enter_lock_screen_password_again">请再次输入锁屏密码</string>
    <string name="text_enter_transmission">进入透传模式</string>
    <string name="text_exit">退出</string>
    <string name="text_exit_app">退出应用</string>
    <string name="text_exit_build_map">退出建图</string>
    <string name="text_exit_charge_page">仅退出界面</string>
    <string name="text_exit_config_mode">退出配置模式</string>
    <string name="text_exit_deploy">退出部署</string>
    <string name="text_exit_on_next_tap">再点击一次退出应用</string>
    <string name="text_exit_only">仅退出</string>
    <string name="text_exit_transmission">退出透传模式</string>
    <string name="text_exiting_map_deploy">正在退出，请稍候...</string>
    <string name="text_finished">完成</string>
    <string name="text_fold">收起</string>
    <string name="text_foreign">其它</string>
    <string name="text_four_column">四列</string>
    <string name="text_four_layers">四层</string>
    <string name="text_get_mac_address">获取MAC地址</string>
    <string name="text_go_to_next">配送下一桌</string>
    <string name="text_going_to_charge_for_low_power">电量过低，将在%1$d秒后前往充电桩充电</string>
    <string name="text_going_to_charging_pile">正在去充电</string>
    <string name="text_going_to_product_point">正在前往出品点</string>
    <string name="text_going_to_recycling_point">正在前往回收点</string>
    <string name="text_going_to_target_table">正在前往</string>
    <string name="text_goto_charge_point">去充电桩</string>
    <string name="text_goto_product_point">去出品点</string>
    <string name="text_goto_recycling_point">去回收点</string>
    <string name="text_i_see">我知道了</string>
    <string name="text_input_large_than_0">请输入大于0的数字</string>
    <string name="text_input_point_name">请输入配送点位名称</string>
    <string name="text_input_try_listen_text_content">请输入文本内容</string>
    <string name="text_invalid_lock_screen_password">不合法的锁屏密码(4位数字)</string>
    <string name="text_is_charging">正在充电中</string>
    <string name="text_is_pairing">正在配置，请稍候...</string>
    <string name="text_key_pressed">按键按下: %1$s</string>
    <string name="text_language_setting">语言设置</string>
    <string name="text_load_map_failed">地图加载失败</string>
    <string name="text_loaded_success_with_no_data">数据加载成功，数据为空</string>
    <string name="text_loading_background_music">正在获取背景音乐数据，请稍候...</string>
    <string name="text_loading_map_list">正在加载地图列表，请稍候...</string>
    <string name="text_locate_finish">定位完成</string>
    <string name="text_lock_screen_setting">锁屏设置</string>
    <string name="text_multi_delivery_mode">自由配送模式</string>
    <string name="text_please_input_key_number">请输入按键对应的餐桌名称</string>
    <string name="text_recycle_mode">回盘模式</string>
    <string name="text_select_delivery_mode">请选择配送模式</string>
    <string name="text_send_data">发送数据</string>
    <string name="text_set_mac_address">保存MAC地址</string>
    <string name="text_stop_send">停止发送</string>
    <string name="text_title_prompt">提示</string>
    <string name="text_version_setting">版本设置</string>
    <string name="text_wifi_auth">WiFi身份认证</string>
    <string name="text_wifi_name">请输入WiFi名称</string>
    <string name="text_wifi_password">请输入WiFi密码</string>
    <string name="text_wifi_setting">网络设置</string>
</resources>