<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_more_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ddd"
    android:orientation="vertical"
    android:paddingTop="@dimen/pd_lg">

    <Button
        android:id="@+id/btn_get_mac_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_config_button"
        android:text="@string/text_get_mac_address"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_broadcast_mac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_get_mac_address"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_config_button"
        android:text="@string/text_broadcast_mac_address"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_save_mac_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_broadcast_mac"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_config_button"
        android:text="@string/text_set_mac_address"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_enter_transparent_transmission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_save_mac_address"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_config_button"
        android:text="@string/text_enter_transmission"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_enter_transparent_transmission"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_config_button"
        android:text="@string/text_send_data"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_send"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_config_button"
        android:text="@string/text_stop_send"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_exit_transparent_transmission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_stop"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_config_button"
        android:text="@string/text_exit_transmission"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

</RelativeLayout>
